@@ -1,5 +1,9 @@
 1.1.2 to 1.1.3
 ----------------------------------------------------------------------
+- Corrected numbering at bottom of asset import page. Thx Jonathan
+  Bug 806
+- Fixed Pop3Monitor exception error. Thx. Xavier. Bug 807
+- Fixed vulscand class cast error. Thx Siddhartha. Bug 810
 - When a new service is added, like SNMP, the categories for the node
   that gained the service will be rescanned to see if the new service
   modifies the filter for a particular category. Bug 683
